# fir

./: .firrc.yaml  .gitignore  README.md  auto.nix  default.nix  fir.cabal
database/: default.nix  documents.nix  examples.nix  extended.nix  mcus.nix  minimal.nix
database/examples/stm32f103c8-bluepill-blinky/: main.c
database/examples/stm32l432kc-nucleo-blink-simple/: main.c  system.c
database/examples/zero/: main.c  system.c
database/linkers/: STM32L051R8Tx.ld  STM32L486RGTx.ld
database/mcu/: stm32f030f4.yaml  stm32f030f4p6.yaml  stm32f030k6.yaml  stm32f030rc.yaml  stm32f103c8.yaml  stm32l051r8.yaml  stm32l432kc.yaml  stm32l476rg.yaml  stm32l486rg.yaml
src/: Commander.hs  Config.hs  Help.hs  Info.hs  MCU.hs  Main.hs  Types.hs
