name:                fir
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/regellosigkeitsaxiom/fir#readme
license:             BSD3
license-file:        LICENSE
author:              Valentin Shirokov
maintainer:          regellosigkeitsaxiom@yandex.ru
copyright:           2017 Valentin Shirokov
category:            private
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fir
  hs-source-dirs:      src
  ghc-options:         -freverse-errors
  main-is:             Main.hs
  other-modules:       Info
                     , Types
                     , MCU
                     , Commander
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , directory
                     , yaml
                     , aeson
                     , bytestring
                     , system-filepath
                     , process
